--- a/src/Makefile
+++ b/src/Makefile
@@ -24,8 +24,11 @@ LINKOPT = -lntl -lgmp
 test_gen521: sfmt.o test_gen.o
 	${CC} -o $@ sfmt.o test_gen.o
 
-param-search521: search.o sfmt.o mt19937ar.o util.o debug.o
-	${CPP} -o $@ search.o sfmt.o mt19937ar.o util.o debug.o ${LINKOPT}
+test-gen-st521: sfmt-st.o test-gen-st.o
+	${CC} -o $@ sfmt-st.o test-gen-st.o
+
+param-search521: search128.o sfmt-st.o mt19937ar.o util.o
+	${CPP} -o $@ search128.o sfmt-st.o mt19937ar.o util.o ${LINKOPT}
 
 search-dist521: search-dist.o sfmt5-cls.o mt19937ar.o util.o shortbase.o
 	${CPP} -o $@ search-dist.o sfmt5-cls.o mt19937ar.o util.o shortbase.o \
