--- a/proto/speed19937/Makefile
+++ b/proto/speed19937/Makefile
@@ -39,6 +39,21 @@ sfmt6_alti2_inline: test_time_inline.c sfmt6_alti2_inline.h
 sfmt6_alti_inline2: test_time2_inline.c sfmt6_alti_inline.h
 	${CC} -DRANDOM=sfmt6_alti_inline.h -o $@ test_time2_inline.c
 
+sfmt7_alti_inline: test_time_inline.c sfmt7_alti_inline.c
+	${CC} -DTICK=1 -o $@ sfmt7_alti_inline.c
+
+sfmt7x2_alti_inline: test_time_inline.c sfmt7x2_alti_inline.c
+	${CC} -DTICK=1 -o $@ sfmt7x2_alti_inline.c
+
+sfmt7x2_alti_inline2: test_time_inline.c sfmt7x2_alti_inline.c
+	${CC} -o $@ sfmt7x2_alti_inline.c
+
+sfmt7x7_alti_inline: test_time_inline.c sfmt7x7_alti_inline.c
+	${CC} -DTICK=1 -o $@ sfmt7x7_alti_inline.c
+
+sfmt7x7_alti_inline2: test_time_inline.c sfmt7x7_alti_inline.c
+	${CC} -o $@ sfmt7x7_alti_inline.c
+
 sfmt4a_alti44497_inline: test_time_inline.c sfmt4a_alti44497_inline.h
 	${CC} -DRANDOM=sfmt4a_alti44497_inline.h -o $@ test_time_inline.c
 
@@ -90,6 +105,9 @@ sfmt4a_std: sfmt4a_std.o test_time.o
 
 sfmt6_std: sfmt6_std.o test_time.o
 	${CC} -o $@ sfmt6_std.o test_time.o
+
+sfmt7_std: sfmt7_std.o test_time.o
+	${CC} -o $@ sfmt7_std.o test_time.o
 
 pmt_fastc: ht-rnd.o test_time.o
 	${CC} -o $@ ht-rnd.o test_time.o
