--- a/src/Makefile
+++ b/src/Makefile
@@ -48,8 +48,14 @@ ht-shortest128-base521: ht-chk-shortest.o ht-shortbase128.o ht-rnd-st.o util.o
 	${CPP} -o $@ ht-chk-shortest.o ht-shortbase128.o ht-rnd-st.o \
 		util.o ${LINKOPT}
 
+search-initial-lung521: search-lung.o sfmt-st.o mt19937ar.o util.o
+	${CPP} -o $@ search-lung.o sfmt-st.o mt19937ar.o util.o ${LINKOPT}
+
 .cpp.o:
 	${CPP} -c $<
 
 .c.o:
 	${CC} -c $<
+
+clean:
+	rm -f *.o
