--- a/src/Makefile
+++ b/src/Makefile
@@ -25,8 +25,11 @@ LINKOPT = -lntl -lgmp
 test_gen521: sfmt.o test_gen.o
 	${CC} -o $@ sfmt.o test_gen.o
 
-test-gen-st521: sfmt-st.o test-gen-st.o
-	${CC} -o $@ sfmt-st.o test-gen-st.o
+#test-gen-st521: sfmt-st.o test-gen-st.o
+#	${CC} -o $@ sfmt-st.o test-gen-st.o
+
+test-gen-st521: sfmt-st.o test-gen-st-cpp.o
+	${CPP} -o $@ sfmt-st.o test-gen-st-cpp.o ${LINKOPT}
 
 param-search521: search128.o sfmt-st.o mt19937ar.o util.o
 	${CPP} -o $@ search128.o sfmt-st.o mt19937ar.o util.o ${LINKOPT}
@@ -37,8 +40,8 @@ param32-search521: search32.o sfmt-st.o mt19937ar.o util.o
 check-param521: chk-irrs-param.o sfmt.o util.o
 	${CPP} -o $@ chk-irrs-param.o sfmt.o util.o ${LINKOPT}
 
-search-dist521: search-dist.o sfmt5-cls.o mt19937ar.o util.o shortbase.o
-	${CPP} -o $@ search-dist.o sfmt5-cls.o mt19937ar.o util.o shortbase.o \
+search-dist521: search-dist.o sfmt-st.o mt19937ar.o util.o shortbase.o
+	${CPP} -o $@ search-dist.o sfmt-st.o mt19937ar.o util.o shortbase.o \
 		${LINKOPT}
 
 shortest128-base521: chk-shortest.o shortbase128.o sfmt-st.o util.o
@@ -56,6 +59,9 @@ search-initial-lung521: search-lung.o sfmt-st.o mt19937ar.o util.o
 
 search-initial-lung19937: search-lung.o sfmt-st.o mt19937ar.o util.o
 	${CPP} -o $@ search-lung.o sfmt-st.o mt19937ar.o util.o ${LINKOPT}
+
+search-crypt-lung19937: search-lung.o sfmt-st88q1.o mt19937ar.o util.o
+	${CPP} -o $@ search-lung.o sfmt-st88q1.o mt19937ar.o util.o ${LINKOPT}
 
 .cpp.o:
 	${CPP} -c $<
