--- a/proto/speed19937/Makefile
+++ b/proto/speed19937/Makefile
@@ -90,6 +90,12 @@ sfmtX7_alti_inline: test_time_inline.c sfmtX7_alti_inline.c
 sfmtX7_alti_inline2: test_time_inline.c sfmtX7_alti_inline.c
 	${CC} -o $@ sfmtX7_alti_inline.c
 
+sfmtX74_alti_inline: test_time_inline.c sfmtX74_alti_inline.c
+	${CC} -DTICK=1 -o $@ sfmtX74_alti_inline.c
+
+sfmtX74_alti_inline2: test_time2_inline.c sfmtX74_alti_inline.c
+	${CC} -o $@ sfmtX74_alti_inline.c
+
 sfmt4a_alti44497_inline: test_time_inline.c sfmt4a_alti44497_inline.h
 	${CC} -DRANDOM=sfmt4a_alti44497_inline.h -o $@ test_time_inline.c
 
