--- a/proto/speed19937/Makefile
+++ b/proto/speed19937/Makefile
@@ -102,6 +102,12 @@ sfmtX75_alti_inline: test_time_inline.c sfmtX75_alti_inline.c
 sfmtX75_alti_inline2: test_time2_inline.c sfmtX75_alti_inline.c
 	${CC} -o $@ sfmtX75_alti_inline.c
 
+sfmtX78_alti_inline: test_time_inline.c sfmtX78_alti_inline.c
+	${CC} -DTICK=1 -o $@ sfmtX78_alti_inline.c
+
+sfmtX78_alti_inline2: test_time2_inline.c sfmtX78_alti_inline.c
+	${CC} -o $@ sfmtX78_alti_inline.c
+
 sfmt4a_alti44497_inline: test_time_inline.c sfmt4a_alti44497_inline.h
 	${CC} -DRANDOM=sfmt4a_alti44497_inline.h -o $@ test_time_inline.c
 
@@ -173,10 +179,10 @@ mt_fastc: mt19937ar.o test_time.o
 	${CC} -o $@ mt19937ar.o test_time.o
 
 mt_fastc_inline: mt19937ar_inline.h test_time_inline.c
-	${CC} -DRANDOM=mt19937ar_inline.h -o $@ test_time_inline.c
+	${CC} -DTICK=1 -o $@ mt19937ar_inline.c
 
-mt_fastc_inline2: mt19937ar_inline.h test_time2_inline.c
-	${CC} -DRANDOM=mt19937ar_inline.h -o $@ test_time2_inline.c
+mt_fastc_inline2: mt19937ar_inline.c test_time2_inline.c
+	${CC} -o $@ mt19937ar_inline.c
 
 .c.o:
 	${CC} -c $<
